[tool.poetry]
name = "loop-dune"
version = "0.1.0"
description = "Collect and analyze Loop data"
authors = ["Rangonomics <rangonomics@gmail.com>"]
packages = [
    { include = "loop_dune", from = "." }
]
include = [
    "loop_dune/config/abis/eth/*.json",
    "loop_dune/config/abis/usd/*.json",
    "loop_dune/config/abis/bnb/*.json"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
eth-typing = "^4.0.0"
tqdm = "^4.66.2"
colorama = "^0.4.6"
requests = "^2.31.0"
streamlit = "^1.32.0"
plotly = "^5.19.0"
schedule = "^1.2.1"
web3 = "^6.15.1"
setuptools = "^78.1.0"
croniter = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = ">=4.1.0,<5.0.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
PyYAML = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
loop-collect = "loop_dune.collector:main"
loop-upload = "loop_dune.dune_uploader:main"
loop-dashboard = "loop_dune.dashboard:main"
loop-sync = "loop_dune.sync:main"